src/include/pcp/pmapi.h


typedef unsigned int	pmID;		
typedef unsigned int	pmInDom;	
typedef struct pmUnits {
#ifdef HAVE_BITFIELDS_LTOR
    signed int		dimSpace : 4;	
    signed int		dimTime : 4;	
    signed int		dimCount : 4;	
    unsigned int	scaleSpace : 4;	
    unsigned int	scaleTime : 4;	
    signed int		scaleCount : 4;	
    int			extraUnit : 5;	
    unsigned int	extraScale : 3;	
#else
    int			extraScale : 5;	
    unsigned int	extraUnit : 3;	
    signed int		scaleCount : 4;	
    unsigned int	scaleTime : 4;	
    unsigned int	scaleSpace : 4;	
    signed int		dimCount : 4;	
    signed int		dimTime : 4;	
    signed int		dimSpace : 4;	
#endif
} pmUnits;			
typedef struct pmDesc {
    pmID	pmid;		
    int		type;		
    pmInDom	indom;		
    int		sem;		
    pmUnits	units;		
} pmDesc;
PCP_CALL extern char *pmErrStr_r(int, char *, int);
PCP_CALL extern int pmLoadNameSpace(const char *);
PCP_CALL extern void pmUnloadNameSpace(void);
PCP_CALL extern int pmGetPMNSLocation(void);
PCP_CALL extern int pmLookupName(int, const char **, pmID *);
PCP_CALL extern int pmGetChildren(const char *, char ***);
PCP_CALL extern int pmGetChildrenStatus(const char *, char ***, int **);
PCP_CALL extern int pmNameID(pmID, char **);		
PCP_CALL extern int pmNameAll(pmID, char ***);		
PCP_CALL extern int pmTraversePMNS(const char *, void(*)(const char *));
PCP_CALL extern int pmLookupDesc(pmID, pmDesc *);
PCP_CALL extern int pmLookupInDom(pmInDom, const char *);
PCP_CALL extern int pmLookupInDomArchive(pmInDom, const char *);
PCP_CALL extern int pmNameInDom(pmInDom, int, char **);
PCP_CALL extern int pmNameInDomArchive(pmInDom, int, char **);
PCP_CALL extern int pmGetInDom(pmInDom, int **, char ***);
PCP_CALL extern int pmGetInDomArchive(pmInDom, int **, char ***);
PCP_CALL extern const char *pmGetContextHostName(int);
PCP_CALL extern int pmWhichContext(void);
PCP_CALL extern int pmDestroyContext(int);
PCP_CALL extern int pmNewContext(int, const char *);
#define PM_CONTEXT_HOST		1	
#define PM_CONTEXT_ARCHIVE	2	
PCP_CALL extern int pmDupContext(void);
PCP_CALL extern int pmUseContext(int);
PCP_CALL extern int pmReconnectContext(int);
PCP_CALL extern int pmAddProfile(pmInDom, int, int *);
PCP_CALL extern int pmDelProfile(pmInDom, int, int *);
typedef struct pmValueBlock {
#ifdef HAVE_BITFIELDS_LTOR
    unsigned int	vtype : 8;	
    unsigned int	vlen : 24;	
#else
    unsigned int	vlen : 24;	
    unsigned int	vtype : 8;	
#endif
    char		vbuf[1];	
} pmValueBlock;
typedef struct pmValue {
    int		inst;		
    union {
	pmValueBlock	*pval;	
	int		lval;	
    } value;
} pmValue;
typedef struct pmValueSet {
    pmID	pmid;		
    int		numval;		
    int		valfmt;		
    pmValue	vlist[1];	
} pmValueSet;
typedef struct pmResult {
    struct timespec	timestamp;	
    int			numpmid;	
    pmValueSet		*vset[1];	
} pmResult;
typedef struct pmResult_v2 {
    struct timeval	timestamp;	
    int			numpmid;	
    pmValueSet		*vset[1];	
} pmResult_v2;
typedef union {
    __int32_t		l;	
    __uint32_t		ul;	
    __int64_t		ll;	
    __uint64_t		ull;	
    float		f;	
    double		d;	
    char		*cp;	
    pmValueBlock	*vbp;	
} pmAtomValue;
PCP_CALL extern int pmFetch(int, pmID *, pmResult **);
PCP_CALL extern int pmFetchArchive(pmResult **);
typedef struct pmLabel {
    unsigned int	name : 16;	
    unsigned int	namelen : 8;	
    unsigned int	flags : 8;	
    unsigned int	value : 16;	
    unsigned int	valuelen : 16;	
} pmLabel;
typedef struct pmLabelSet {
    unsigned int 	inst;		
    int			nlabels;	
    char		*json;		
    unsigned int	jsonlen : 16;	
    unsigned int	padding : 15;	
    unsigned int	compound: 1;	
    pmLabel		*labels;	
    void		*hash;		
} pmLabelSet;
PCP_CALL extern int pmMergeLabelSets(pmLabelSet **, int, char *, int,
		int (*filter)(const pmLabel *, const char *, void *), void *);
#define PM_LOG_MAXHOSTLEN	64	
#define PM_TZ_MAXLEN		40	
typedef struct pmLogLabel {
    int		magic;	
    pid_t	pid;		
    struct timespec start;	
    char	hostname[PM_MAX_HOSTNAMELEN];	
    char	timezone[PM_MAX_TIMEZONELEN];	
    char	zoneinfo[PM_MAX_ZONEINFOLEN];	
} pmLogLabel;
PCP_CALL extern int pmGetArchiveLabel(pmLogLabel *);
PCP_CALL extern int pmGetArchiveEnd(struct timespec *);
PCP_CALL extern void pmFreeResult(pmResult *);
PCP_CALL extern int pmExtractValue(int, const pmValue *, int, pmAtomValue *, int);
PCP_CALL extern void pmPrintValue(FILE *, int, int, const pmValue *, int);
PCP_CALL extern int pmConvScale(int, const pmAtomValue *, const pmUnits *, pmAtomValue *, 
		       const pmUnits *);
PCP_CALL extern void pmSortInstances(pmResult *);
PCP_CALL extern int pmSetMode(int, const struct timespec *, const struct timespec *);
PCP_CALL extern int pmStore(const pmResult *);
PCP_CALL extern int pmLookupText(pmID, int, char **);
PCP_CALL extern int pmLookupInDomText(pmInDom, int, char **);
PCP_CALL extern char *pmIDStr_r(pmID, char *, int);
PCP_CALL extern char *pmInDomStr_r(pmInDom, char *, int);
PCP_CALL extern char *pmTypeStr_r(int, char *, int);
PCP_CALL extern char *pmUnitsStr_r(const pmUnits *, char *, int);
PCP_CALL extern char *pmAtomStr_r(const pmAtomValue *, int, char *, int);
PCP_CALL extern int pmParseInterval(const char *, struct timespec *, char **);
PCP_CALL extern int pmUseZone(const int);
PCP_CALL extern int pmNewZone(const char *);
PCP_CALL extern int pmNewContextZone(void);
PCP_CALL extern int pmWhichZone(char **);
typedef struct pmMetricSpec {
    int		isarch;         
    char	*source;        
    char	*metric;        
    int		ninst;          
    char	*inst[1];       
} pmMetricSpec;
PCP_CALL extern int pmParseMetricSpec(const char *, int, char *, pmMetricSpec **,
			     char **);
PCP_CALL extern int pmprintf(const char *, ...) __PM_PRINTFLIKE(1,2);
PCP_CALL extern int pmflush(void);
PCP_CALL extern char *pmGetConfig(const char *);
typedef struct pmLogLabel_v2 {
    int		ll_magic;	
    pid_t	ll_pid;				
    struct timeval	ll_start;		
    char	ll_hostname[PM_LOG_MAXHOSTLEN];	
    char	ll_tz[PM_TZ_MAXLEN];		
} pmLogLabel_v2;
#define pmGetArchiveEnd pmGetArchiveEnd_v2
#define pmLogLabel pmLogLabel_v2
#define pmGetArchiveLabel pmGetArchiveLabel_v2
#define pmParseInterval pmParseInterval_v2
#define pmSetMode pmSetMode_v2
#define pmResult pmResult_v2
#define pmFetch pmFetch_v2
#define pmFreeResult pmFreeResult_v2
#define pmFetchArchive pmFetchArchive_v2
#define pmStore pmStore_v2
#define pmSortInstances pmSortInstances_v2